--- a/views/account.pug
+++ b/views/account.pug
@@ -31,6 +31,10 @@ block content
             .user-view__content
                 .user-view__form-container
                     h2.heading-secondary.ma-bt-md Your account settings
+                    //- WITHOUT API
+                    //- form.form.form-user-data(action="/submit-user-data" method="POST")
+
+                    //- WITH API
                     form.form.form-user-data
                         .form__group
                             label.form__label(for='name') Name
